--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongodb": "^5.1.0",
     "request": "^2.88.2",
     "telegraf": "^4.12.2"
   }
