--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
+    "puppeteer": "^19.7.5",
     "request": "^2.88.2",
+    "taiko": "^1.3.9",
     "telegraf": "^4.12.2"
   }
 }
