--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "html-pdf-node": "^1.0.8",
     "mongodb": "^5.1.0",
+    "path": "^0.12.7",
     "puppeteer": "^19.8.5",
     "request": "^2.88.2",
     "taiko": "^1.3.9",
