--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "html-pdf-node": "^1.0.8",
     "mongodb": "^5.1.0",
     "path": "^0.12.7",
-    "puppeteer": "^19.9.1",
+    "puppeteer": "19.8.5",
     "request": "^2.88.2",
     "taiko": "^1.3.9",
     "telegraf": "^4.12.2"
