--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "node node_modules/puppeteer/install.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,7 +15,7 @@
     "html-pdf-node": "^1.0.8",
     "mongodb": "^5.1.0",
     "path": "^0.12.7",
-    "puppeteer": "^19.7.5",
+    "puppeteer": "10.2.0",
     "request": "^2.88.2",
     "taiko": "^1.3.9",
     "telegraf": "^4.12.2"
