--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^5.1.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "telegram-keyboard": "^2.3.2"
   }
 }
