--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "excel4node": "^1.8.1",
     "express": "^4.18.2",
+    "json-as-xlsx": "^2.5.3",
     "mongodb": "^5.1.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
     "telegraf": "^4.12.2",
-    "telegram-keyboard": "^2.3.2"
+    "telegram-keyboard": "^2.3.2",
+    "xlsx": "^0.18.5"
   }
 }
