--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "excel4node": "^1.8.1",
     "express": "^4.18.2",
     "json-as-xlsx": "^2.5.3",
+    "moment": "^2.29.4",
     "mongodb": "^5.1.0",
     "path": "^0.12.7",
     "request": "^2.88.2",
